--- a/CodingTracker/App.config
+++ b/CodingTracker/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="Key0" value="lmaooo"/>
+		<add key="conString" value="Data Source=coding-tracker.db"/>
 	</appSettings>
 </configuration>
